cabal-version:       2.4
name:                error-count
version:             0.1.0.0

executable error-count
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
   , bytestring
   , parallel
   , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O3 -threaded
